A last bit of cleanup before releasing to github.

--- a/README
+++ b/README
@@ -5,9 +5,7 @@ It also includes support for calling the library from MATLAB using a mex file.
 I am releasing this to open source in the hopes that it will be useful for others.
 Please don't make me regret it.
 
-If something bad happens to your hardware or application through the use of this software, you agree that I, Johanan L. Codona, The University of Arizona, the Center for Astronomical Adaptive Optics, and Boston Micromachines are not liable in any way.
-This also extends to any subjects you were using this software to treat or examine.
-You use this software at your own risk.
+If something bad happens to your hardware or application through the use of this software, you agree that I, Johanan L. Codona, The University of Arizona, the Center for Astronomical Adaptive Optics, and Boston Micromachines are not liable in any way.  This also extends to any subjects you were using this software to treat or examine.  You use this software at your own risk.
 
 Johanan L. Codona, PhD
 March 17, 2011
